<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_recipe"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/main_image_recipe" />

        <View
            android:id="@+id/gradient_overlay"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@drawable/gradient_overlay"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_recipe"
            app:layout_constraintEnd_toEndOf="@+id/image_view_recipe"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/image_view_recipe"
            app:layout_constraintTop_toTopOf="@+id/image_view_recipe"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/text_view_overview_ready_in_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="12dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/image_view_recipe"
            app:layout_constraintEnd_toEndOf="@+id/gradient_overlay" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text_view_overview_ready_in_minutes"
            app:layout_constraintEnd_toEndOf="@+id/text_view_overview_ready_in_minutes"
            app:layout_constraintStart_toStartOf="@+id/text_view_overview_ready_in_minutes"
            app:srcCompat="@drawable/ic_clock"
            app:tint="@color/white"
            android:contentDescription="@string/ready_in_minutes_image" />

        <TextView
            android:id="@+id/text_view_overview_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_overview_ready_in_minutes"
            app:layout_constraintEnd_toStartOf="@+id/text_view_overview_ready_in_minutes" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/text_view_overview_likes"
            app:layout_constraintEnd_toEndOf="@+id/text_view_overview_likes"
            app:layout_constraintStart_toStartOf="@+id/text_view_overview_likes"
            app:srcCompat="@drawable/ic_like"
            app:tint="@color/red"
            android:contentDescription="@string/like_image" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/courgette"
            android:textColor="@color/darkGray"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/iv_speak_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_recipe" />

        <ImageView
            android:id="@+id/iv_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegetarian"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vegetarian"
            app:layout_constraintStart_toEndOf="@+id/iv_vegetarian"
            app:layout_constraintTop_toTopOf="@+id/iv_vegetarian" />

        <ImageView
            android:id="@+id/iv_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/iv_vegetarian"
            app:layout_constraintTop_toBottomOf="@+id/iv_vegetarian"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/vegan"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_vegan"
            app:layout_constraintStart_toEndOf="@+id/iv_vegan"
            app:layout_constraintTop_toTopOf="@+id/iv_vegan" />

        <ImageView
            android:id="@+id/iv_gluten_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_vegetarian"
            app:layout_constraintStart_toEndOf="@+id/tv_vegetarian"
            app:layout_constraintTop_toTopOf="@+id/tv_vegetarian"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_gluten_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gluten_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_gluten_free"
            app:layout_constraintStart_toEndOf="@+id/iv_gluten_free"
            app:layout_constraintTop_toTopOf="@+id/iv_gluten_free" />

        <ImageView
            android:id="@+id/iv_dairy_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/iv_gluten_free"
            app:layout_constraintTop_toBottomOf="@+id/iv_gluten_free"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_dairy_free"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dairy_free"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_dairy_free"
            app:layout_constraintStart_toEndOf="@+id/iv_dairy_free"
            app:layout_constraintTop_toTopOf="@+id/iv_dairy_free" />

        <ImageView
            android:id="@+id/iv_healthy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_gluten_free"
            app:layout_constraintStart_toEndOf="@+id/tv_gluten_free"
            app:layout_constraintTop_toTopOf="@+id/tv_gluten_free"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_healthy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/healthy"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_healthy"
            app:layout_constraintStart_toEndOf="@+id/iv_healthy"
            app:layout_constraintTop_toTopOf="@+id/iv_healthy" />

        <ImageView
            android:id="@+id/iv_cheap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="@+id/iv_healthy"
            app:layout_constraintTop_toBottomOf="@+id/iv_healthy"
            app:srcCompat="@drawable/ic_check_circle"
            app:tint="@color/darkGray" />

        <TextView
            android:id="@+id/tv_cheap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cheap"
            android:textColor="@color/darkGray"
            app:layout_constraintBottom_toBottomOf="@+id/iv_cheap"
            app:layout_constraintStart_toEndOf="@+id/iv_cheap"
            app:layout_constraintTop_toTopOf="@+id/iv_cheap" />

        <TextView
            android:id="@+id/text_view_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_dairy_free"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_speak_overview"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            app:tint="@color/black"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/listen_overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_recipe"
            app:srcCompat="@drawable/ic_speaker"
            android:focusable="true" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>